# ledgerforge

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
demo/: README.md  build_demo.py  make_accounts.py  make_editor.py  make_home.py  make_unspec.py  plaid.example.toml  plaid_sandbox.py
demo/.ddev/: config.yaml
demo/data/: rules.json
demo/data/statements/: card.ofx  current.ofx  euro.ofx  savings.ofx
src/ledgerforge/: __init__.py  book.py  config.py  gnucash_xml.py  overrides.py  parsers.py  report.py  rules.py  serve.py  transfers.py
tests/: test_engine.py  test_gnucash_xml.py  test_report.py
